--- a/Amazon_replica/style.css
+++ b/Amazon_replica/style.css
@@ -1,38 +1,37 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-#nav{
-    position: fixed;
-    top: 0%;
+
+/*upper part of header*/
+.upper-part{
     width: 100%;
 }
-#nav div{
-    display: inline-block;
+.left-upper-part{
+    width: 300px;
+    height: 60px;
     float: left;
-    background-color: black;
-    height: 40px;
-}
-.menu img{
-    width: 30px;
-}
-.logo img{
-    width: 100px;
-}
-.btn img{
-    width: 30px;
-}
-#lang img{
-    width: 30px;
-}
-
-#order{
-    text-decoration: none;
+    background-color:#131921;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+}
+.mid-upper-part{
+    width: calc(100% - 700px);
+    height: 60px;
+    float: left;
+    background-color: #131921;
+    color: white;
+}
+.right-upper-part{
+    width: 400px;
+    height: 60px;
+    float: left;
+    background-color:#131921;
+    color: white;
 }
 
-#cart img{
-    width: 40px;
-}
 
+/*lower part of header*/
+.lower-part{
+    width: 100%;
+}
