--- a/Amazon_replica/style.css
+++ b/Amazon_replica/style.css
@@ -7,6 +7,7 @@
 /*upper part of header*/
 .upper-part{
     width: 100%;
+    height: 100%;
 }
 .left-upper-part{
     width: 300px;
@@ -37,15 +38,17 @@
     float: left;
     position: relative;
     left: 12px;
-    top:8px;
+    top:8px;   
+}
+.logo:hover{
     border: 1px solid white;
-    
 }
 .logo img{
     width: 110px;
     padding-left: 5px;
     padding-top: 5px;
 }
+
 .loc{
     width: 150px;
     height: 45px;
@@ -53,18 +56,51 @@
     position: relative;
     left: 20px;
     top: 8px;
-    border: 1px solid white;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 3px;
+    font-size: small;
+    padding: 20x;
 
 }
+.loc:hover{
+    border: 1px solid white;
+}
+
 
 /*mid-upper-portion*/
-.mid-upper-part{
+.wrapper{
+    width: 650px;
+    height: 45px;
     border: 1px solid white;
+    position: relative;
+    top: 8px;
+    left: 8px;
 }
 
+/*right-upper-portion*/
 
+.lang{
+    width: 100px;
+    float: left;
+    border: 1px solid white;
+}
+.account{
+    width: 100px;
+    float:left;
+    border:1px solid white;
+}
+.order{
+    width: 100px;
+    float:left;
+    border: 1px solid white;
+}
+.cart{
+    border: 1px solid white;
+}
 /*lower part of header*/
 
-
+.lower-part{
+    width: 100%;
+    height: 100%;
+    background-color: #232f3e;
+    color: white;
+}
