--- a/Amazon_replica/style.css
+++ b/Amazon_replica/style.css
@@ -102,5 +102,5 @@
     width: 100%;
     height: 100%;
     background-color: #232f3e;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
