--- a/Amazon_replica/style.css
+++ b/Amazon_replica/style.css
@@ -103,4 +103,11 @@
     height: 100%;
     background-color: #232f3e;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+a[target]
+{
+    color: white;
+    text-decoration: none;
+    padding: 5px;
 }
