--- a/Amazon_replica/style.css
+++ b/Amazon_replica/style.css
@@ -51,8 +51,11 @@
 .loc{
     width: 50%;
     height: 55px;
-    float: left;
-    
+    float: left;    
+}
+.loc img{
+    width: 20px;
+    padding-top: 15px;
 }
 .loc1{
     float: left;
@@ -77,19 +80,20 @@ a[target]{
 
 
 /*mid-upper-portion*/
-.wrapper{
-    width: 650px;
-    height: 55px;
+
+.mid-upper-part{
     border: 1px solid white;
 }
+
+
 
 /*right-upper-portion*/
 
 .lang{
     width: 50px;
     height: 55px;
-    float: left;
-    padding: 10px;
+    float: left; 
+    padding:10px;
 }
 .lang img{
     width: 30px;
@@ -125,19 +129,91 @@ a[target]{
     width: 100%;
     height: 40px;
     background-color: #232f3e;
+    font-size: medium;
 }
 .left-lower-part{
     width: 4%;
     height: 40px;
     float: left;
-    padding: 8px;
+    padding: 6px;
+    border: 1px solid white;
 }
 .mid-lower-part{
     width: 96%;
     height: 40px;
     float: left;
     padding: 10px;
-
+}
+.mlp-seller{
+    width: 15px;
+    height: 40px;
+    padding: 3px;
+    
+}
+.mlp-mobiles{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-deals{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-service{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-electronics{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-books{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-prime{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-fashion{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-release{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-home{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-pay{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-computer{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-coupans{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
+}
+.mlp-toys{
+    width: 10px;
+    height: 40px;
+    padding: 3px;
 }
 
 
