--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -21,7 +21,6 @@
     height: 55px;
     float: left;
     background-color: #131921;
-    color: white;
 }
 .right-upper-part{
     width: 320px;
@@ -168,8 +167,7 @@ a[target]{
     width: 50px;
     height: 40px;
     float: left;
-    padding: 6px;
-    border: 1px solid white;
+    padding: 7px;
 }
 /*mid lower part*/
 
@@ -177,7 +175,7 @@ a[target]{
     width: calc(100% - 50px);
     height: 40px;
     float: left;
-    padding: 10px;
+    padding-top: 10px;
 }
 .mlp-seller{
     width: 15px;
