--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+/*------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------*/
 /*upper part of header*/
 .upper-part{
     width: 100%;
@@ -99,7 +100,7 @@ a[target]{
     padding-top: 6px;
 }
 .search{
-    width:570px;
+    width:100%;
     height: 40px;
 }
 .search-btn{
@@ -108,9 +109,8 @@ a[target]{
     float: left;
     padding-top: 6px;
 }
-
 .search-btn img{
-    width: 30px;
+    width: 100%;
     height: 33px;
     border: none;
     border: none;
@@ -249,4 +249,137 @@ a[target]{
     padding: 3px;
 }
 
+/*-------------------------------------------------------------------------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
+/* section part */
+section{
+    width: 100%;
+    height: 100px;
+}
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* footer part */
+
+/*footer1*/
+
+.footer1{
+    width: 100%;
+    height: 50px;
+    background-color: #384b61;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    text-align: center;
+    padding-top: 18px;
+}
+
+/*footer2*/
+
+.footer2{
+    width: 100%;
+    height: 300px;
+    color: white;
+    background-color: #232f3e;
+    font-family: Arial, Helvetica, sans-serif;
+    border-bottom: 1px solid white;
+}
+.default{
+    font-size: medium;
+    font-weight: bold;
+}
+ul li{
+    list-style-type: none;
+    padding-top: 8px;
+}
+.footer-left{
+    width: 350px;
+    height: 300px;
+    float: left;
+    padding-top: 50px;
+    padding-left: 150px;
+    font-size: 15px;
+}
+.footer-mid1{
+    width: 350px;
+    height: 300px;
+    float: left;
+    padding-top: 50px;
+    padding-left: 50px;
+    font-size: 15px;
+}
+.footer-mid2{
+    width: 350px;
+    height: 300px;
+    float: left;
+    padding-top: 50px;
+    font-size: 15px;
+}
+.footer-right{
+    width:calc(100% - 1050px);
+    height: 300px;
+    float: left;
+    padding-top: 50px;
+    font-size: 15px;
+}
+
+/*footer3
+
+.footer3{
+    width: 100%;
+    height: 150px;
+    background-color: #232f3e;
+    color: white;
+}
+.footerbase
+{
+    width: 100%;
+    height: 100px;
+}
+.footerlogo{
+    width: 50%;
+    height: 100px;
+    float: left;
+}
+.footerlogo img{
+    width: 600px;
+    padding-top: 52px;
+    padding-left: 75%;
+}
+.language
+{
+    width: 50%;
+    height: 100px;
+    float: left;
+    padding: 40px;
+}
+.by_default_option{
+    width: 100px;
+    height: 35px;
+    border: 1px solid;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: small;
+    padding-left: 15px;
+}
+
+.language img{
+    width: 18px;
+    height: 22px;
+    padding-top: 6px;
+    border: none;
+    vertical-align: text-bottom;
+}
+.country{
+    width: 100%;
+    height: 50px;
+    padding-left: 100px;
+}
+ul li{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    padding: 5px;
+    display: inline;
+    list-style-type: none;
+}
