--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -324,7 +324,7 @@ ul li{
     font-size: 15px;
 }
 
-/*footer3
+/*footer3*/
 
 .footer3{
     width: 100%;
@@ -376,7 +376,7 @@ ul li{
     height: 50px;
     padding-left: 100px;
 }
-ul li{
+.country ul li{
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     padding: 5px;
