--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -268,7 +268,7 @@ section{
     width: 100%;
     height: 50px;
     background-color: #384b61;
-    color: white;
+    color: #DDD;;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     text-align: center;
@@ -280,7 +280,7 @@ section{
 .footer2{
     width: 100%;
     height: 300px;
-    color: white;
+    color: #DDD;;
     background-color: #232f3e;
     font-family: Arial, Helvetica, sans-serif;
     border-bottom: 1px solid white;
@@ -330,7 +330,7 @@ ul li{
     width: 100%;
     height: 150px;
     background-color: #232f3e;
-    color: white;
+    color: #DDD;;
 }
 .footerbase
 {
@@ -382,4 +382,42 @@ ul li{
     padding: 5px;
     display: inline;
     list-style-type: none;
+}
+
+/*footer4*/
+
+.footer4{
+    width: 100%;
+    height: 170px;
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+}
+table{
+    width: calc(100% - 100px);
+    height:50px;
+}
+td{
+    padding-left:150px;
+    padding-top: 30px;
+    line-height: 14px;
+}
+
+/*footer5*/
+
+.footer5{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 12px;
+}
+.footer5 ul li{
+    display: inline;
+    padding: 20px;
 }
