--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -246,7 +246,6 @@ a[target]{
     bottom: 400px;
     left: 0;
     background-color:transparent;
-    
 }
 .card-1stchild{
     width: 320px;
@@ -386,6 +385,7 @@ a[target]{
     width: 100%;
     height: 410px;
     background: transparent;
+    padding: 10px;
 }
 .card2child1{
     width: calc(100% - 700px);
