--- a/Amazon_replica/form.css
+++ b/Amazon_replica/form.css
@@ -230,14 +230,15 @@ a[target]{
 .form{
     width: 100%;
     height: 1000px;
-    position: relative;
 }
 .formcontainer{
     width: 50%;
-    height: 950px;
-    position: absolute;
-    top: 2%;
-    left: 25%;
+    height: 980px;
+    margin: 0 auto;
+    padding: 10px;
+}
+.heading{
+    padding: 8px;
 }
 .address{
       font-size: small;
@@ -251,6 +252,9 @@ a[target]{
 }
 .addressdescription a[href]{
     text-decoration: none;
+}
+.data{
+    padding: 10px;
 }
 .formcontainer input[type=text]{
     width: 100%;
@@ -270,7 +274,6 @@ input[placeholder]{
 label{
     font-size: small;
     font-weight: bold;
-    line-height: 20px;
 }
 
 .button{
@@ -279,5 +282,5 @@ label{
     background-color: goldenrod;
     border: none;
     cursor: pointer;
-
+    margin: 15px;
 }
