--- a/Amazon_replica/form.css
+++ b/Amazon_replica/form.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
 }
 /*------------------------------------------------------------------------------------------------------------------------------
@@ -128,7 +129,8 @@ a[target]{
     padding:10px;
 }
 .lang img{
-    width: 30px;
+    width: 25px;
+    padding-top: 10px;
 }
 .account{
     width: 120px;
@@ -144,13 +146,15 @@ a[target]{
     float:left;
     font-size: small;
     padding: 10px;
+
+
 }
 .cart{
     width: 70px;
     height: 55px;
     float: left;
     font-size: smaller;
-    padding: 5px;
+    padding: 6px;
 }
 .cart img{
     width: 30px;
@@ -166,61 +170,29 @@ a[target]{
 /*left lower part*/
 
 .left-lower-part{
-    width: 50px;
+    width: 52px;
     height: 40px;
     float: left;
     padding: 7px;
 }
+.n:hover{
+    border: 1px solid white;
+}
 /*mid lower part*/
 
 .mid-lower-part{
-    width: calc(100% - 50px);
+    width: calc(100% - 52px);
     height: 40px;
     float: left;
     padding-top: 10px;
 }
-.mlp-seller{
-    padding: 3px;    
+.nav_2{
+    padding: 3px;   
 }
-.mlp-mobiles{
-    padding: 3px;
+.nav_2:hover{
+    border: 1px solid white;
 }
-.mlp-deals{
-    padding: 3px;
-}
-.mlp-service{
-    padding: 3px;
-}
-.mlp-electronics{
-    padding: 3px;
-}
-.mlp-books{
-    padding: 3px;
-}
-.mlp-prime{
-    padding: 3px;
-}
-.mlp-fashion{
-    padding: 3px;
-}
-.mlp-release{
-    padding: 3px;
-}
-.mlp-home{
-    padding: 3px;
-}
-.mlp-pay{
-    padding: 3px;
-}
-.mlp-computer{
-    padding: 3px;
-}
-.mlp-coupans{
-    padding: 3px;
-}
-.mlp-toys{
-    padding: 3px;
-}
+
 
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------------------------------------------*/
@@ -241,8 +213,8 @@ a[target]{
     padding: 8px;
 }
 .address{
-      font-size: small;
-      text-decoration: none;
+    font-size: small;
+    text-decoration: none;
 }
 .highlight{
     color: red;
@@ -263,6 +235,9 @@ a[target]{
     border: 1px solid black;
 }
 input[placeholder]{
+    padding: 10px;
+}
+input{
     padding: 10px;
 }
 .select{
