--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: pointer;
 }
 /*------------------------------------------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------------------------------------------*/
@@ -152,7 +153,7 @@ a[target]{
     height: 55px;
     float: left;
     font-size: smaller;
-    padding: 5px;
+    padding: 6px;
 }
 .cart img{
     width: 30px;
@@ -168,61 +169,29 @@ a[target]{
 /*left lower part*/
 
 .left-lower-part{
-    width: 50px;
+    width: 52px;
     height: 40px;
     float: left;
     padding: 7px;
 }
+.n:hover{
+    border: 1px solid white;
+}
 /*mid lower part*/
 
 .mid-lower-part{
-    width: calc(100% - 50px);
+    width: calc(100% - 52px);
     height: 40px;
     float: left;
     padding-top: 10px;
 }
-.mlp-seller{
-    padding: 3px;    
+.nav_2{
+    padding: 3px;   
 }
-.mlp-mobiles{
-    padding: 3px;
+.nav_2:hover{
+    border: 1px solid white;
 }
-.mlp-deals{
-    padding: 3px;
-}
-.mlp-service{
-    padding: 3px;
-}
-.mlp-electronics{
-    padding: 3px;
-}
-.mlp-books{
-    padding: 3px;
-}
-.mlp-prime{
-    padding: 3px;
-}
-.mlp-fashion{
-    padding: 3px;
-}
-.mlp-release{
-    padding: 3px;
-}
-.mlp-home{
-    padding: 3px;
-}
-.mlp-pay{
-    padding: 3px;
-}
-.mlp-computer{
-    padding: 3px;
-}
-.mlp-coupans{
-    padding: 3px;
-}
-.mlp-toys{
-    padding: 3px;
-}
+
 
 /*-------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
@@ -601,3 +570,38 @@ a[target]{
     display: inline;
     padding: 20px;
 }
+.sidenav{
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: white;
+    overflow-x: hidden;
+    padding:60px ;
+    transition: all 0.5s;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.sidenav a{
+    text-decoration: none;
+    color:black;
+    display: block;
+    padding: 30px 0 30px 20px;
+}
+.sidenav a:hover{
+    color: rgb(88, 85, 85);
+}
+.closebtn{
+    position: absolute;
+    top: -30px;
+    right: 10px;
+    font-size: 35px !important;
+}
+
+
+
+
+
+
+
