--- a/Amazon_replica/form.css
+++ b/Amazon_replica/form.css
@@ -3,17 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     cursor: pointer;
-    font-family: Arial, Helvetica, sans-serif;
 }
 /*------------------------------------------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------------------------------------------*/
 /*upper part of header*/
-/*.header{
-    position: fixed;
+
+.header{
     width: 100%;
-    top: 0;
-    z-index: 20;
-}*/
+    height: auto;
+}
 
 .upper-part{
     width: 100%;
@@ -178,6 +176,46 @@ a[target]{
 .n:hover{
     border: 1px solid white;
 }
+.sidenav{
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: white;
+    overflow-x: hidden;
+    transition: all 0.5s;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.sidenav a{
+    text-decoration: none;
+    color:grey;
+    line-height: 30px;
+    display: block;
+    padding: 5px 13px;
+    font-size: small;
+}
+.sidenav a:hover{
+    background-color: rgb(231, 227, 227);
+}
+.closebtn{
+    position: absolute;
+    right: 10px;
+    font-size: 35px !important;
+    color: white !important;
+}
+.sidenav h3{
+    width: 100%;
+    height: 50px;
+    padding: 15px;
+    background-color: red;
+    color: white;
+    background-color: #232f3e;
+}
+.sidenav h4{
+    padding: 12px;
+}
+
 /*mid lower part*/
 
 .mid-lower-part{
