--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -86,7 +86,7 @@ a[target]{
 
 /*mid-upper-part*/
 
-.dropdown{
+.menu{
     width: 50px;
     height: 40px;
     float: left;
@@ -95,7 +95,6 @@ a[target]{
     margin-top: 6px;
     background-color: rgb(192, 197, 201);
     color: black;
-    border: none;
 }
 .searchbox{
     width:calc(100% - 100px);
@@ -119,22 +118,64 @@ a[target]{
 }
 
 /*right-upper-part*/
-
-.lang{
+ /*-----------------------------------------lang-----------------------------------------------------
+   The dropdown container */
+  .dropdown {
     width: 50px;
-    height: 55px;
-    float: left; 
-    padding:10px;
-}
-.lang img{
-    width: 25px;
-    padding-top: 10px;
-}
+    height: 55px;  
+    float: left;
+    background-color: black;
+  }
+  .dropdown img{
+      width: 25px;
+      float: left; 
+      padding-top:8px;
+  }
+
+  
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    border: none;
+    padding: 14px 16px;
+    background-color: black;
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+/*--------------------------------------------------------Account-------------------------------*/
 .account{
     width: 120px;
     height: 55px;
     float:left;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     padding: 10px;
 }
@@ -154,6 +195,7 @@ a[target]{
 }
 .cart img{
     width: 30px;
+    float: left;
 }
 /*lower part of header*/
 
@@ -198,7 +240,7 @@ a[target]{
 }
 .closebtn{
     position: absolute;
-    right: 10px;
+    right: 0;
     font-size: 35px !important;
     color: white !important;
 }
