--- a/Amazon_replica/homepage.css
+++ b/Amazon_replica/homepage.css
@@ -178,6 +178,7 @@ a[target]{
     float:left;
     font-size: small;
     padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .order{
     width: 80px;
@@ -191,7 +192,7 @@ a[target]{
     height: 55px;
     float: left;
     font-size: smaller;
-    padding: 6px;
+    padding: 7px;
 }
 .cart img{
     width: 30px;
@@ -522,7 +523,7 @@ a[target]{
       text-align: center;
   }
   
-/*.card3{
+.card3{
     width: 100%;
     height: 330px;
 }
@@ -551,7 +552,7 @@ a[target]{
     height: 80%px;
     padding: 18px;
 }
-.card4{
+/*.card4{
     width: 100%;
     height: 330px;
 }*/
