--- a/Indochino/indochino.css
+++ b/Indochino/indochino.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 .nav{
     font-size: 12px;
@@ -25,3 +26,31 @@
         display: none;
     }
  }
+ .sec{
+     background-color: rgb(233, 231, 231);
+ }
+ .body{
+    background-color: #333F48; 
+ }
+ .body h1{
+     font-family: serif;
+ }
+.body h6{
+    font-size: large;
+}
+.body button{
+    width: 190px;
+    height: 50px;
+    border: 1px solid white;
+    color: white;
+    font-weight: bold;
+    background-color: transparent;
+}
+.body button:hover{
+    background-color: white;
+    color: black;
+}
+.style{
+    line-height: 40px;
+    font-size: small;
+}
